--- a/geometry_util/CMakeLists.txt
+++ b/geometry_util/CMakeLists.txt
@@ -1,17 +1,40 @@
 cmake_minimum_required(VERSION 2.4.6)
-include($ENV{ROS_ROOT}/core/rosbuild/rosbuild.cmake)
+project(geometry_util)
 
-rosbuild_init()
-rosbuild_find_ros_package(build_tools)
-include(${build_tools_PACKAGE_PATH}/scripts/build_common.cmake)
+find_package(catkin REQUIRED COMPONENTS 
+  roscpp build_tools)
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR})
 find_package(GEOS REQUIRED)
 find_package(OpenCV)
 
-include_directories(include ${OpenCV_INCLUDE_DIRS} ${GEOS_INCLUDE_DIRS})
+catkin_package(
+  INCLUDE_DIRS include
+  LIBRARIES ${PROJECT_NAME}
+  CATKIN_DEPENDS roscpp
+)
+
+execute_process(
+  COMMAND rospack find build_tools
+  ERROR_VARIABLE __null
+  OUTPUT_VARIABLE build_tools_PACKAGE_PATH
+  OUTPUT_STRIP_TRAILING_WHITESPACE)
+include(${build_tools_PACKAGE_PATH}/scripts/build_common.cmake)
+
+include_directories(include ${catkin_INCLUDE_DIRS} ${OpenCV_INCLUDE_DIRS} ${GEOS_INCLUDE_DIRS})
 
 add_library(${PROJECT_NAME}
   src/intersection.cpp
   src/polygon.cpp)
-target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBRARIES} ${GEOS_LIBRARIES})
+target_link_libraries(${PROJECT_NAME} ${catkin_LIBRARIES} ${OpenCV_LIBRARIES} ${GEOS_LIBRARIES})
+
+install(DIRECTORY include/${PROJECT_NAME}/
+  DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
+  FILES_MATCHING PATTERN "*.h"
+)
+
+install(TARGETS ${PROJECT_NAME}
+  RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+  LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+  ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+)
