--- a/image_util/CMakeLists.txt
+++ b/image_util/CMakeLists.txt
@@ -1,30 +1,62 @@
 cmake_minimum_required(VERSION 2.4.6)
-include($ENV{ROS_ROOT}/core/rosbuild/rosbuild.cmake)
+project(image_util)
 
-# Set the build type.  Options are:
-#  Coverage       : w/ debug symbols, w/o optimization, w/ code-coverage
-#  Debug          : w/ debug symbols, w/o optimization
-#  Release        : w/o debug symbols, w/ optimization
-#  RelWithDebInfo : w/ debug symbols, w/ optimization
-#  MinSizeRel     : w/o debug symbols, w/ optimization, stripped binaries
-#set(ROS_BUILD_TYPE RelWithDebInfo)
-
-rosbuild_init()
-rosbuild_find_ros_package(build_tools)
-include(${build_tools_PACKAGE_PATH}/scripts/build_common.cmake)
-
-set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
-set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
+find_package(catkin REQUIRED COMPONENTS 
+  roscpp
+  rospy
+  roslib
+  std_msgs
+  nodelet
+  cv_bridge
+  tf
+  geometry_msgs
+  image_geometry
+  nav_msgs
+  camera_calibration_parsers
+  math_util
+  opencv_util
+  image_transport
+  lapackpp
+  build_tools)
 
 find_package(OpenCV)
-include_directories(${OpenCV_INCLUDE_DIRS})
-
 find_package(Qt4 REQUIRED)
+find_package(Boost REQUIRED COMPONENTS filesystem system)
 
 include(${QT_USE_FILE})
-include_directories(${QT_INCLUDE_DIR})
 
-rosbuild_add_library(${PROJECT_NAME} 
+catkin_package(
+  INCLUDE_DIRS include
+  LIBRARIES ${PROJECT_NAME}
+  CATKIN_DEPENDS 
+    roscpp
+    roscpp
+    rospy
+    roslib
+    std_msgs
+    nodelet
+    cv_bridge
+    tf
+    geometry_msgs
+    image_geometry
+    nav_msgs
+    camera_calibration_parsers
+    math_util
+    opencv_util
+    image_transport
+    lapackpp
+)
+
+execute_process(
+  COMMAND rospack find build_tools
+  ERROR_VARIABLE __null
+  OUTPUT_VARIABLE build_tools_PACKAGE_PATH
+  OUTPUT_STRIP_TRAILING_WHITESPACE)
+include(${build_tools_PACKAGE_PATH}/scripts/build_common.cmake)
+
+include_directories(include ${catkin_INCLUDE_DIRS} ${QT_INCLUDE_DIR} ${OpenCV_INCLUDE_DIRS})
+
+add_library(${PROJECT_NAME} 
   src/motion_estimation.cpp 
   src/image_normalization.cpp 
   src/rolling_normalization.cpp 
@@ -32,49 +64,60 @@ rosbuild_add_library(${PROJECT_NAME}
   src/draw_util.cpp
   src/geometry_util.cpp
   src/image_warp_util.cpp)
-target_link_libraries(${PROJECT_NAME} ${QT_LIBRARIES} ${OpenCV_LIBRARIES})
+target_link_libraries(${PROJECT_NAME} ${catkin_LIBRARIES} ${QT_LIBRARIES} ${OpenCV_LIBRARIES})
 
-rosbuild_add_library(${PROJECT_NAME}_nodelets
+add_library(${PROJECT_NAME}_nodelets
   src/nodelets/rotate_image_nodelet.cpp
   src/nodelets/contrast_stretch_nodelet.cpp
   src/nodelets/scale_image_nodelet.cpp
   src/nodelets/draw_text_nodelet.cpp)
 target_link_libraries(${PROJECT_NAME}_nodelets ${PROJECT_NAME})
 
-# NODES
-rosbuild_add_executable(normalization_image_generator_node src/nodes/normalization_image_generator_node.cpp)
+add_executable(normalization_image_generator_node src/nodes/normalization_image_generator_node.cpp)
 target_link_libraries(normalization_image_generator_node ${PROJECT_NAME})
 
-rosbuild_add_executable(dummy_image_publisher src/nodes/dummy_image_publisher.cpp)
+add_executable(dummy_image_publisher src/nodes/dummy_image_publisher.cpp)
+target_link_libraries(dummy_image_publisher ${catkin_LIBRARIES})
 
-rosbuild_add_executable(rotate_image src/nodes/rotate_image.cpp)
+add_executable(rotate_image src/nodes/rotate_image.cpp)
+target_link_libraries(rotate_image ${catkin_LIBRARIES})
 
-rosbuild_add_executable(scale_image src/nodes/scale_image.cpp)
+add_executable(scale_image src/nodes/scale_image.cpp)
+target_link_libraries(scale_image ${catkin_LIBRARIES})
 
-rosbuild_add_executable(draw_text src/nodes/draw_text.cpp)
+add_executable(draw_text src/nodes/draw_text.cpp)
+target_link_libraries(draw_text ${catkin_LIBRARIES})
 
-rosbuild_add_executable(contrast_stretch src/nodes/contrast_stretch.cpp)
+add_executable(contrast_stretch src/nodes/contrast_stretch.cpp)
+target_link_libraries(contrast_stretch ${catkin_LIBRARIES})
 
-# TESTS
-rosbuild_add_executable(test_geometry_util test/test_geometry_util.cpp)
-rosbuild_add_gtest_build_flags(test_geometry_util)
-target_link_libraries(test_geometry_util ${PROJECT_NAME})
+if(CATKIN_ENABLE_TESTING)
+  find_package(rostest REQUIRED)
+  add_rostest_gtest(test_geometry_util test/test_geometry_util.cpp)
+  target_link_libraries(test_geometry_util ${PROJECT_NAME})
 
-rosbuild_add_executable(test_motion_estimation test/test_motion_estimation.cpp)
-rosbuild_add_gtest_build_flags(test_motion_estimation)
-target_link_libraries(test_motion_estimation ${PROJECT_NAME})
+  add_rostest_gtest(test_motion_estimation test/test_motion_estimation.cpp)
+  target_link_libraries(test_motion_estimation ${PROJECT_NAME})
 
-rosbuild_add_executable(image_warp_tests test/image_warp_tests.cpp)
-rosbuild_add_gtest_build_flags(image_warp_tests)
-target_link_libraries(image_warp_tests ${PROJECT_NAME})
-rosbuild_link_boost(image_warp_tests filesystem system)
+  add_rostest_gtest(image_warp_tests test/image_warp_tests.cpp)
+  target_link_libraries(image_warp_tests ${PROJECT_NAME} ${Boost_LIBRARIES})
 
-rosbuild_add_executable(image_normalization_tests test/image_normalization_tests.cpp)
-rosbuild_add_gtest_build_flags(image_normalization_tests)
-target_link_libraries(image_normalization_tests ${PROJECT_NAME})
-rosbuild_link_boost(image_normalization_tests filesystem system)
+  add_rostest_gtest(image_normalization_tests test/image_normalization_tests.cpp)
+  target_link_libraries(image_normalization_tests ${PROJECT_NAME} ${Boost_LIBRARIES})
+endif()
 
-rosbuild_add_rostest(launch/geometry_util.test)
-rosbuild_add_rostest(launch/motion_estimation.test)
+install(DIRECTORY include/${PROJECT_NAME}/
+  DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
+  FILES_MATCHING PATTERN "*.h"
+)
 
-#rosbuild_add_rostest(launch/image_util.test)
+install(TARGETS ${PROJECT_NAME} normalization_image_generator_node dummy_image_publisher rotate_image scale_image draw_text contrast_stretch
+  RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+  LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+  ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+)
+
+install(DIRECTORY launch
+  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
+)
+
