--- a/swri_image_util/package.xml
+++ b/swri_image_util/package.xml
@@ -30,6 +30,7 @@
   <depend>swri_math_util</depend>
   <build_depend>swri_nodelet</build_depend>
   <depend>swri_opencv_util</depend>
+  <depend>swri_roscpp</depend>
   <depend>tf</depend>
 
   <test_depend>rostest</test_depend>
