--- a/swri_geometry_util/CMakeLists.txt
+++ b/swri_geometry_util/CMakeLists.txt
@@ -51,6 +51,9 @@ if(CATKIN_ENABLE_TESTING)
 
   add_rostest_gtest(test_intersection test/intersection.test test/test_intersection.cpp)
   target_link_libraries(test_intersection ${PROJECT_NAME})
+
+  add_rostest_gtest(test_geometry_util test/geometry_util.test test/test_geometry_util.cpp)
+  target_link_libraries(test_geometry_util ${PROJECT_NAME})
 endif()
 
 install(DIRECTORY include/${PROJECT_NAME}/
